# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.93 2004/10/12 17:33:40 zhen Exp $

  12 Oct 2004; John Davis <zhen@gentoo.org> modules/netboot.py:
  small netboot fixups

  11 Oct 2004; <zhen@gentoo.org> modules/netboot.py,
  targets/netboot/netboot-busybox.sh, targets/netboot/netboot-image.sh,
  targets/netboot/netboot-kernel.sh, targets/netboot/netboot-packages.sh,
  targets/netboot/netboot.sh:
  sweeping updates and changes to the netboot code. the patches should fix the
  arch specific code as well as some pkgcache issues, etc. Much thanks to Mike
  Frysinger <vapier@gentoo.org> for writing and contributing the patches.

  06 Oct 2004; John Davis <zhen@gentoo.org> files/catalyst.1,
  livecd/runscript-support/kmerge.sh, targets/netboot/netboot-busybox.sh,
  targets/netboot/netboot-image.sh, targets/netboot/netboot-kernel.sh,
  targets/netboot/netboot.sh:
  more code cleanup and maintenance

  05 Oct 2004; John Davis <zhen@gentoo.org> modules/catalyst_support.py,
  modules/generic_stage_target.py, +modules/netboot.py,
  +targets/netboot/netboot-busybox.sh, +targets/netboot/netboot-image.sh,
  +targets/netboot/netboot-kernel.sh, +targets/netboot/netboot-packages.sh,
  +targets/netboot/netboot.sh:
  initial import of the netboot code. thanks to Guy Martin <gmsoft@gentoo.org>
  for writing them!

  05 Oct 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
  targets/stage3/stage3-chroot.sh, targets/tinderbox/tinderbox-chroot.sh:
  bugfix for #66083 which in turn addresses #61605. distcc apparently does not
  have to start a server on the build host for it to distribute.

  04 Oct 2004; John Davis <zhen@gentoo.org> catalyst: