@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/Attic/stage1-chroot.sh,v 1.22 2004/10/05 13:22:06 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage1/Attic/stage1-chroot.sh,v 1.23 2004/10/12 18:01:22 zhen Exp $
 		
 /usr/sbin/env-update
 source /etc/profile
@@ -24,7 +24,7 @@ fi
 
 if [ -n "${clst_PKGCACHE}" ]
 then
-	export clst_myemergeopts="${clst_myemergeopts} --usepkg --buildpkg"
+	export clst_myemergeopts="${clst_myemergeopts} --usepkg --buildpkg --newuse"
 fi
 
 # setup our environment
@@ -36,7 +36,8 @@ install -d ${ROOT}
 export clst_buildpkgs="$(/tmp/build.py)"
 STAGE1_USE="$(source /etc/make.profile/make.defaults ; echo ${STAGE1_USE})"
 
-USE="-* build ${STAGE1_USE}" emerge ${clst_myemergeopts} --noreplace ${clst_buildpkgs} || exit 1
+# duplicate line to below - why is this here??
+#USE="-* build ${STAGE1_USE}" emerge ${clst_myemergeopts} --noreplace ${clst_buildpkgs} || exit 1
 
 if [ -n "${clst_VERBOSE}" ]
 then
@@ -44,4 +45,4 @@ then
 	sleep 15
 fi
 
-USE="-* build" emerge ${clst_myemergeopts} --noreplace ${clst_buildpkgs} || exit 1
+USE="-* build ${STAGE1_USE}" emerge ${clst_myemergeopts} --noreplace ${clst_buildpkgs} || exit 1
