@@ -1,6 +1,14 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.93 2004/10/12 17:33:40 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.94 2004/10/12 18:01:22 zhen Exp $
+
+  12 Oct 2004; John Davis <zhen@gentoo.org>
+  targets/embedded/cramfs-runscript.sh, targets/embedded/embedded-chroot.sh,
+  +targets/embedded/unmerge.sh, targets/grp/grp-chroot.sh,
+  targets/livecd-stage1/livecd-stage1-chroot.sh, targets/netboot/netboot.sh,
+  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh,
+  livecd/runscript-support/kmerge.sh:
+  bugfixes for #67195, #67197, #67122, and #46918
 
   12 Oct 2004; John Davis <zhen@gentoo.org> modules/netboot.py:
   small netboot fixups
